deploy/kubernetes/kompose/etcd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-env.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: etcd
  name: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: etcd
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-env.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cloudstorage-cloudstoragesystem: "true"
        io.kompose.service: etcd
    spec:
      containers:
        - env:
            - name: ALLOW_NONE_AUTHENTICATION
              value: "yes"
          image: bitnami/etcd:3.5
          name: etcd
          ports:
            - containerPort: 2379
          resources: {}
      hostname: etcd
      restartPolicy: Always
status: {}
