deploy/kubernetes/kompose/fileserverrpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: fileserverrpc
  name: fileserverrpc
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: fileserverrpc
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cloudstorage-cloudstoragesystem: "true"
        io.kompose.service: fileserverrpc
    spec:
      containers:
        - image: jiangxiyang/fileserverrpc:1.0
          name: fileserverrpc
          ports:
            - containerPort: 8001
          resources: {}
      hostname: fileserverrpc
      restartPolicy: Always
status: {}
