deploy/kubernetes/kompose/go-stash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-env.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: go-stash
  name: go-stash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: go-stash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-env.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cloudstorage-cloudstoragesystem: "true"
        io.kompose.service: go-stash
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Shanghai
          image: kevinwan/go-stash:1.0.8
          name: go-stash
          resources: {}
          volumeMounts:
            - mountPath: /app/etc
              name: go-stash-claim0
      restartPolicy: Always
      volumes:
        - name: go-stash-claim0
          persistentVolumeClaim:
            claimName: go-stash-claim0
status: {}
