deploy/kubernetes/kompose/nginx-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-gateway
  name: nginx-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cloudstorage-cloudstoragesystem: "true"
        io.kompose.service: nginx-gateway
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Shanghai
          image: nginx:1.21.5
          name: nginx-gateway
          ports:
            - containerPort: 8081
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-gateway-claim0
            - mountPath: /var/log/nginx
              name: nginx-gateway-claim1
      restartPolicy: Always
      volumes:
        - name: nginx-gateway-claim0
          persistentVolumeClaim:
            claimName: nginx-gateway-claim0
        - name: nginx-gateway-claim1
          persistentVolumeClaim:
            claimName: nginx-gateway-claim1
status: {}
