deploy/kubernetes/kompose/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-env.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: etcd
  name: etcd
spec:
  ports:
    - name: "2379"
      port: 2379
      targetPort: 2379
  selector:
    io.kompose.service: etcd
status:
  loadBalancer: {}
