deploy/kubernetes/kompose/fileserverapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: fileserverapi
  name: fileserverapi
spec:
  ports:
    - name: "8889"
      port: 8889
      targetPort: 8889
  selector:
    io.kompose.service: fileserverapi
status:
  loadBalancer: {}
