deploy/kubernetes/kompose/nginx-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-gateway
  name: nginx-gateway
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8081
  selector:
    io.kompose.service: nginx-gateway
status:
  loadBalancer: {}
