deploy/kubernetes/kompose/cloudstorage-cloudstoragesystem-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cloudstorage-cloudstoragesystem
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cloudstorage-cloudstoragesystem: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cloudstorage-cloudstoragesystem: "true"
